--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,16 @@
-/Client.class
-/ClientTest.class
-/Server.class
-/ServerTest.class
+/DNSProtos$1.class
+/DNSProtos$Address$1.class
+/DNSProtos$Address$Builder.class
+/DNSProtos$Address$KnownAddress$1.class
+/DNSProtos$Address$KnownAddress$Builder.class
+/DNSProtos$Address$KnownAddress.class
+/DNSProtos$Address$KnownAddressOrBuilder.class
+/DNSProtos$Address.class
+/DNSProtos$AddressList$1.class
+/DNSProtos$AddressList$Builder.class
+/DNSProtos$AddressList.class
+/DNSProtos$AddressListOrBuilder.class
+/DNSProtos$AddressOrBuilder.class
+/DNSProtos.class
+/Main.class
+/DNSProto.proto
