work for poznan.pl

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -13,5 +13,7 @@
 /DNSProtos$AddressOrBuilder.class
 /DNSProtos.class
 /Protos.class
+/Protos2.class
 /Server.class
 /ServerTest.class
+/Protos3.class
